--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
 }
 
 ext.moduleName = 'br.com.pinter.tqdatabase'
