--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+/*
+ * Copyright (C) 2021 Emerson Pinter - All Rights Reserved
+ */
+
 apply plugin: 'java-library'
 
 group 'br.com.pinter.tqdatabase'
