--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 }
 
@@ -27,6 +27,10 @@ jar {
                 'Implementation-Version': project.version,
                 'Automatic-Module-Name': moduleName)
     }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileJava {
