--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,14 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 }
 
 ext.moduleName = 'br.com.pinter.tqdatabase'
 
 jar {
+    //noinspection GroovyAssignabilityCheck
     manifest {
         inputs.property("moduleName", moduleName)
         attributes('Implementation-Title': project.name,
