--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,18 @@
  */
 
 apply plugin: 'java-library'
+apply plugin: 'org.sonarqube'
+
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
+    }
+}
 
 group 'br.com.pinter.tqdatabase'
 version '0.2'
