--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+    implementation 'net.java.dev.jna:jna-platform-jpms:5.11.0'
 }
 
 ext.moduleName = 'br.com.pinter.tqdatabase'
