--- a/build.gradle
+++ b/build.gradle
@@ -8,17 +8,15 @@ apply plugin: 'org.sonarqube'
 
 buildscript {
     repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        mavenCentral()
     }
     dependencies {
         classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
     }
 }
 
-group 'br.com.pinter.tqdatabase'
-version '0.2'
+group = 'br.com.pinter.tqdatabase'
+version = '0.2'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
